--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "react-dom": "^19.2.3",
     "react-markdown": "^10.1.0",
     "remark-gfm": "^4.0.1",
-    "sharp": "^0.33.5"
+    "sharp": "^0.33.5",
+    "twilio": "^5.11.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
