--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@tiptap/starter-kit": "^3.13.0",
     "@vercel/node": "^3.0.7",
     "formidable": "^3.5.1",
+    "hls.js": "^1.6.15",
     "lucide-react": "^0.561.0",
     "next": "^16.0.10",
     "react": "^19.2.3",
@@ -43,7 +44,9 @@
     "react-markdown": "^10.1.0",
     "remark-gfm": "^4.0.1",
     "sharp": "^0.33.5",
-    "twilio": "^5.11.1"
+    "twilio": "^5.11.1",
+    "video.js": "^8.23.4",
+    "videojs-markers": "^1.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
