--- a/apps/blogs-platform/package.json
+++ b/apps/blogs-platform/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.19",
     "next": "^16.0.10",
     "react": "^19.2.3",
     "react-dom": "^19.2.3"
@@ -24,4 +25,3 @@
     "typescript": "~5.9.3"
   }
 }
-
