--- a/apps/blogs-platform/package.json
+++ b/apps/blogs-platform/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/typography": "^0.5.19",
     "next": "^16.0.10",
     "react": "^19.2.3",
